--- a/config.env
+++ b/config.env
@@ -1,5 +1,4 @@
 NODE_ENV=development
 PORT=2105
-DATABASE_REMOTE=
-DATABASE_LOCAL=
-DATABASE_PASSWORD=
+DATABASE_REMOTE=mongodb+srv://hamdycl:<PASSWORD>@cluster0.pianrv5.mongodb.net/test
+DATABASE_PASSWORD=ceVdu6-cysmec-parzim
