--- a/package.json
+++ b/package.json
@@ -1,11 +1,18 @@
 {
   "dependencies": {
+    "@types/express": "^4.17.17",
+    "@types/jest": "^29.5.1",
+    "@types/jsonwebtoken": "^9.0.1",
+    "@types/node": "^18.15.11",
     "bcrypt": "^5.1.0",
     "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
+    "jest": "^29.5.0",
+    "joi": "^17.9.1",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.4",
     "nodemon": "^2.0.22",
+    "typescript": "^5.0.4",
     "validator": "^13.9.0"
   },
   "devDependencies": {
