--- a/package.json
+++ b/package.json
@@ -4,18 +4,24 @@
     "@types/jest": "^29.5.1",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/node": "^18.15.11",
+    "@types/validator": "^13.7.15",
     "bcrypt": "^5.1.0",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "express": "^4.18.2",
     "jest": "^29.5.0",
     "joi": "^17.9.1",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.4",
     "nodemon": "^2.0.22",
+    "pino": "^8.12.1",
+    "pino-pretty": "^10.0.0",
     "typescript": "^5.0.4",
     "validator": "^13.9.0"
   },
   "devDependencies": {
+    "@types/morgan": "^1.9.4",
     "dotenv": "^16.0.3",
     "morgan": "^1.10.0"
   },
