write app and comment all unhandled controllers

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,8 @@
     "noEmit": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    // "typeRoots": ["./node_modules/@types", "src/shared/environment.d.ts"],
+
   }
 }
