--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@bazar/shared": "file:../shared",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.1",
@@ -19,13 +20,15 @@
     "nodemon": "^2.0.22",
     "pino": "^8.12.1",
     "pino-pretty": "^10.0.0",
-    "typescript": "^5.0.4",
     "validator": "^13.9.0"
   },
   "devDependencies": {
     "@types/morgan": "^1.9.4",
     "dotenv": "^16.0.3",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "ts-node": "^10.9.1",
+    "tsconfig-paths": "^4.2.0",
+    "typescript": "^5.0.4"
   },
   "name": "bazar",
   "description": "fully organized environment to buy and sell handmade products from and to community",
@@ -33,7 +36,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon src/server.ts"
+    "start": "nodemon src/server.ts",
+    "debug": "nodemon --config nodemon.json --inspect src/server.ts"
   },
   "keywords": [],
   "author": "",
