--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,6 @@
     "bcrypt": "^5.1.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
-    "crypto": "^1.0.1",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
     "jest": "^29.5.0",
@@ -33,7 +32,7 @@
   "name": "bazar",
   "description": "fully organized environment to buy and sell handmade products from and to community",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/server.ts",
   "scripts": {
     "test": "jest --coverage",
     "start": "nodemon src/server.ts",
